--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
   "name": "electron-updater-example",
-  "version": "0.6.3",
+  "version": "0.6.4",
   "main": "main.js",
   "description": "electron-updater example project",
   "author": "Matt Haggard",
   "scripts": {
-    "publish": "build -p always"
+    "publish": "cross-env GH_TOKEN=3dba29447102814594b08066503349cf19172751 build -p always"
   },
   "devDependencies": {
     "electron": "^1.7.9",
     "electron-builder": "^20.8.2"
   },
   "dependencies": {
+    "cross-env": "^5.2.0",
     "electron-log": "^1.3.0",
-    "electron-updater": "^2.21.4"
+    "electron-updater": "^3.0.3"
   },
   "build": {
-    "appId": "com.github.iffy.electronupdaterexample",
+    "appId": "com.github.jacklovepdf.electronupdaterexample",
     "mac": {
       "category": "your.app.category.type",
       "target": [
